[gd_scene load_steps=9 format=3 uid="uid://qeti6qadlgpj"]

[ext_resource type="Script" path="res://Objects/Station/Infuser/Infuser.gd" id="1_pwtwj"]
[ext_resource type="Shape2D" uid="uid://bg7ko03pxgrse" path="res://Objects/Station/Infuser/Shape.tres" id="2_togwr"]
[ext_resource type="PackedScene" uid="uid://cxtfymvcer1y5" path="res://Objects/Slot/Slot.tscn" id="3_r7vo2"]
[ext_resource type="Texture2D" uid="uid://dp26c5021y070" path="res://Assets/Sprites/Infuser/Infuser.png" id="3_vnmlr"]
[ext_resource type="Texture2D" uid="uid://hn4n4lnkaks7" path="res://Assets/Sprites/Infuser/On.png" id="4_raouy"]

[sub_resource type="Animation" id="Animation_ho3ll"]
resource_name = "default"
length = 1.25
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_vnmlr")]
}

[sub_resource type="Animation" id="Animation_kq8kx"]
resource_name = "use"
length = 3.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_raouy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Slots/Slot1:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.75, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-19, -54), Vector2(0, -22), Vector2(0, -22), Vector2(-19, -54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Slots/Slot2:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.25, 2, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(19, -54), Vector2(0, -22), Vector2(0, -22), Vector2(19, -54)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Slots/Slot1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.75, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Slots/Slot2:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 2, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Slots/Slot3:position")
tracks/5/interp = 2
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 2.25, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(33, -21), Vector2(0, -22), Vector2(0, -22), Vector2(33, -21)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Slots/Slot3:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2.25, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../Slots/Slot4:position")
tracks/7/interp = 2
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.75, 2.5, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(17, 11), Vector2(0, -22), Vector2(0, -22), Vector2(17, 11)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../Slots/Slot4:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 2.5, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("../Slots/Slot5:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(1, 2.75, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-19, 11), Vector2(0, -22), Vector2(0, -22), Vector2(-19, 11)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("../Slots/Slot5:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 2.75, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("../Slots/Slot6:position")
tracks/11/interp = 2
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.25, 3, 3.7, 3.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-35, -21), Vector2(0, -22), Vector2(0, -22), Vector2(-35, -21)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("../Slots/Slot6:visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 3, 3.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8e16w"]
_data = {
"default": SubResource("Animation_ho3ll"),
"use": SubResource("Animation_kq8kx")
}

[node name="Infuser" type="StaticBody2D"]
z_index = -1
input_pickable = true
script = ExtResource("1_pwtwj")

[node name="Shape" type="CollisionShape2D" parent="."]
shape = ExtResource("2_togwr")

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("4_raouy")

[node name="Player" type="AnimationPlayer" parent="Sprite"]
libraries = {
"": SubResource("AnimationLibrary_8e16w")
}
autoplay = "default"

[node name="Slots" type="Node2D" parent="."]
position = Vector2(0, 5)

[node name="Slot1" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(-19, -54)

[node name="Slot2" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(19, -54)

[node name="Slot3" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(33, -21)

[node name="Slot4" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(17, 11)

[node name="Slot5" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(-19, 11)

[node name="Slot6" parent="Slots" groups=["slot"] instance=ExtResource("3_r7vo2")]
position = Vector2(-35, -21)

[node name="ResultSlot" parent="." instance=ExtResource("3_r7vo2")]
position = Vector2(0, -16)
is_result_slot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
